# DS412-Time-Series-Analysis-and-Stochastic-Processes

./: .gitignore  README.md  pyproject.toml
notebooks/: 1.0-Case-Study.ipynb  2.0-Statistics and Regression Review.ipynb  3.0-assignment.ipynb  ARIMA Lecture.ipynb  Basic Statistics - Descriptive and Inferential (Student's Copy).ipynb  Exponential Smoothing.ipynb  Final Examination - DS412 Time Series Analysis and Stochastic Methods.ipynb  Machine Learning for Time Series Forecasting.ipynb  SARIMA Lecture.ipynb  Statistical Forecasting Basic Models-Student's.ipynb  Statistical Forecasting Basic Models.ipynb  sarima-assignment.ipynb  test.ipynb  ts-assignment.ipynb  tsa_functions.py
notebooks/special_datasets/: gsod_manila_1990_2020.csv  tourism.csv
src/: config.py
src/matplotlib/: styles.py
