[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "iragca>=0.4.1",
    "kagglehub>=0.3.13",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "polars>=1.32.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ruff>=0.12.1",
    "src",
]

[tool.uv.sources]
src = { workspace = true }
